--- a/manifest.json
+++ b/manifest.json
@@ -53,5 +53,5 @@
     "start_url": "./index.html",
     "background_color": "#cc3300",
     "display": "fullscreen",
-    "theme_color": "#cc7400",
+    "theme_color": "#cc7400"
 }
